# telesync-app

./: .env.backup  AWS_S3_SETUP.md  CLOUD_DEPLOYMENT.md  CLOUD_SYNC_SETUP.md  DARK_THEME_UPDATE.md  DEPLOYMENT_GUIDE.md  DISCORD_SETUP.md  MULTI_USER_SETUP_GUIDE.md  Procfile  README.md  REAL_TELEGRAM_SETUP.md  SETUP_GUIDE.md  SUPABASE_SETUP.md  TELEGRAM_EASY_SETUP.md  TELEGRAM_SETUP_GUIDE.md  app.py  cloud_storage_service.py  config.example.json  debug-frontend.md  desktop_sync_app.py  discord_config.example.json  discord_config.json  discord_download_stats.json  discord_downloader.py  discord_requirements.txt  env.example  index.html  local_sync_service.py  mock_telegram_monitor.py  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  run_monitor_locally.py  server.js  start_telegram_monitor.py  telegram_config.json  telegram_downloader.py  (+11 more)
sessions/: demo-user-123.session  demo-user-123.session-journal  test.session
src/: App.tsx
src/components/: CircularProgress.tsx  Dashboard.tsx  DownloadsPage.tsx  LandingPage.tsx  LoginPage.tsx  TelegramChannels.tsx  TelegramConnection.tsx
src/contexts/: AuthContext.tsx
src/services/: apiService.ts  telegramApiService.ts  telegramService.ts
