[tool.poetry]
name = "telesync-backend"
version = "0.1.0"
description = "TeleSync Backend with Python Telegram Monitor"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.24.0"
requests = "^2.25.0"
yt-dlp = "^2023.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
